Created a search bar so that users can search for brackets and leagues in the future

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 Explore
             </h3>
 
+            <!-- Search brackets & leagues -->
+
+            <form action="" class="explore-search">
+                <input type="text" class="text-sm" placeholder="Search...">
+                <button type="submit" class="text-sm">Search</button>
+            </form>
+
             <div class="explore-grid">
 
                 <!-- Explore brackets -->
